<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WasteManagementApp</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="followRoute">Jedź trasą</string>
    <string name="sendSavedData">Wyślij dane</string>
    <string name="settings">Ustawienia</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="title_activity_database_view">DatabaseViewActivity</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="retrieving_data">Pobieranie danych...</string>
    <string name="menu_settings">Ustawienia</string>
    <string name="pref_send_formular">Wysyłanie formularzy</string>
    <string name="pref_send_formular_summary">Wysyłanie formularzy natychmiast po wypełnieniu</string>
    <string name="pref_send_report">Wysyłanie raportów</string>
    <string name="pref_send_report_summary">Wysyłanie raportów natychmiast po wypełnieniu</string>
    <string name="pref_sync_frequency">Częstotliwość synchronizacji</string>
    <string name="pref_sync_frequency_summary">Ustaw częstotliwość synchronizacji</string>
    <string name="pref_host_ip_summary">Ustaw IP</string>
    <string name="pref_host_ip">IP serwera</string>
    <string name="pref_port">Port</string>
    <string name="pref_port_summary">Ustaw port</string>
    <string name="pref_route_summary">Ustaw id trasy</string>
    <string name="pref_route">Trasa</string>
    <string name="pref_connection">Parametry połączenia</string>
    <string name="pref_sync_setting">Ustawienia synchronizacji</string>
    <string name="title_activity_dbformulars">DBFormulars</string>
    <string name="selectAll">Zaznacz wszystkie</string>
    <string name="sendAll">Wyślij wszystkie</string>
    <string name="send">Wyślij</string>
    <string name="title_activity_formular">FormularActivity</string>
    <string name="formular">Formularz</string>
    <string name="latitude">szerokość</string>
    <string name="longitude">Długość</string>
    <string name="saveToDb">Zapisz w bazie</string>
    <string name="amountOfBins">Ilość koszy na śmieci</string>
    <string name="percentageFilling">Procentowe wypełnienie kosza</string>
    <string name="logIn">Zaloguj</string>
    <string name="login">Login</string>
    <string name="password">Hasło</string>
</resources>
