<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
 
    <PreferenceCategory android:title="@string/pref_connection" >
        <EditTextPreference
                android:title="@string/pref_host_ip"
                android:summary="@string/pref_host_ip_summary"
                android:key="prefHost"/>
        <EditTextPreference
                android:title="@string/pref_port"
                android:summary="@string/pref_port_summary"
                android:key="prefPort"/>
        <EditTextPreference
                android:title="@string/pref_route"
                android:summary="@string/pref_route_summary"
                android:key="prefRoute"/>
    </PreferenceCategory>
     
    <PreferenceCategory android:title="@string/pref_sync_setting" >
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="prefSendFormular"
            android:summary="@string/pref_send_formular_summary"
            android:title="@string/pref_send_formular" >
        </CheckBoxPreference>
        
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="prefSendReport"
            android:summary="@string/pref_send_report_summary"
            android:title="@string/pref_send_report" >
        </CheckBoxPreference>
 
        <ListPreference
            android:key="prefSyncFrequency"
            android:entries="@array/syncFrequency"
            android:summary="@string/pref_sync_frequency_summary"
            android:entryValues="@array/syncFrequencyValues"
            android:title="@string/pref_sync_frequency" />
    </PreferenceCategory>
 
</PreferenceScreen>