<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
     >

        <Button
            android:id="@+id/btnSendSavedData"
            style="@style/btnStyleShakespeare"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/btnFollowRoute"
            android:layout_centerVertical="true"
            android:text="@string/sendSavedData" />

        <Button
            android:id="@+id/btnFollowRoute"
            style="@style/btnStyleShakespeare"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/btnSettings"
            android:layout_alignParentTop="true"
            android:hint="Hit to follow the route!"
            android:text="@string/followRoute" />

        <Button
            android:id="@+id/btnSettings"
            style="@style/btnStyleShakespeare"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:text="@string/settings" />

</RelativeLayout>
